--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>se.negod</groupId>
     <artifactId>generic</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
     
     <packaging>jar</packaging>
     
@@ -121,7 +121,8 @@
         <connection>scm:git:git@github.com:negod/Webservice_Generics.git</connection>
         <url>scm:git:git@github.com:negod/Webservice_Generics.git</url>
         <developerConnection>scm:git:git@github.com:negod/Webservice_Generics.git</developerConnection>
-    </scm>
+      <tag>HEAD</tag>
+  </scm>
     
     <distributionManagement>
         <repository>
