--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
     <groupId>se.negod</groupId>
     <artifactId>generic</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
     
     <packaging>jar</packaging>
     
@@ -119,7 +119,7 @@
     
     <distributionManagement>
         <repository>
-            <id>negod.releases</id>
+            <id>negod.releses</id>
             <url>http://109.74.2.250:8081/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
